Criar API de catalogos operacionais
